# tracewave

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/tests/: test_detectors.py  test_ensemble.py  test_features.py  test_processor.py  test_windows.py
backend/tracewave/: __init__.py  bus.py  config.py  live.py  metrics.py  models.py  serde.py  wire.py
backend/tracewave/api/: __init__.py  main.py  state.py
backend/tracewave/ingest/: __init__.py  replay.py  runner.py  sources.py  sse.py  wikimedia.py
backend/tracewave/processing/: __init__.py  features.py  processor.py  windows.py
backend/tracewave/processing/detectors/: __init__.py  base.py  ensemble.py  ewma.py  hst.py  zscore.py
backend/tracewave/run/: __init__.py  common.py  dev.py  ingestor.py  processor.py
backend/tracewave/storage/: __init__.py  migrations.sql  timescale.py
data/: sample.jsonl
docs/: DEPLOYMENT.md  INTERVIEW_PREP.md  PROJECT_DEEP_DIVE.md
frontend/: .dockerignore  .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
frontend/components/: AnomalyCard.tsx  AnomalyFeed.tsx  Brand.tsx  ConnectionStatus.tsx  ContactCard.tsx  DemoBanner.tsx  DetectorComparison.tsx  Header.tsx  IncidentModal.tsx  MetricTiles.tsx  PulseChart.tsx  SiteFooter.tsx  SiteNav.tsx  Sparkline.tsx  ui.tsx
frontend/lib/: demoStream.ts  format.ts  site.ts  types.ts  useLiveStream.ts
(+5 files in other folders)
