[project]
name = "tracewave"
version = "0.1.0"
description = "Real-time anomaly detection on a live public data firehose"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "redis>=5.0",
    "asyncpg>=0.29",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "river>=0.21",
    "prometheus-client>=0.20",
    "orjson>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tracewave*"]

[tool.pytest.ini_options]
# Lets `pytest` find the package without an install step. The core windowing /
# detector tests then run with only pytest present (no Redis/Timescale/river).
pythonpath = ["."]
testpaths = ["tests"]
